--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -73,36 +73,48 @@
 	    <div class="ui middle aligned stackable grid container">
 	      <div class="row">
 	        <div class="eight wide column">
-	          <h3 class="ui header">A.I. Playground</h3>
+	          <h3 class="ui header">Sample Commands</h3>
 							<div class="ui list">
 							  <div class="item">
 							    <i class="large github middle aligned icon"></i>
 							    <div class="content">
-							      <p>Bootstrap button</p>
-							    </div>
-							  </div>
-							  <div class="item">
-							    <i class="large github middle aligned icon"></i>
-							    <div class="content">
-							      <p>Give me my client list</p>
-							    </div>
-							  </div>
-							  <div class="item">
-							    <i class="large github middle aligned icon"></i>
-							    <div class="content">
-							      <p>Green background</p>
-							    </div>
-							  </div>
-							  <div class="item">
-							    <i class="large github middle aligned icon"></i>
-							    <div class="content">
-							      <p>Red background</p>
+							      <p>Bootstrap Button</p>
 							    </div>
 							  </div>
 								<div class="item">
 							    <i class="large github middle aligned icon"></i>
 							    <div class="content">
-							      <p>White background</p>
+							      <p>Green Background</p>
+							    </div>
+							  </div>
+								<div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>White Background</p>
+							    </div>
+							  </div>
+							  <div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Red Background</p>
+							    </div>
+							  </div>
+								<div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Clear Background</p>
+							    </div>
+							  </div>
+							  <div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Give Me My Client List</p>
+							    </div>
+							  </div>
+								<div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Employee Database</p>
 							    </div>
 							  </div>
 								<div class="item">
@@ -114,7 +126,7 @@
 								<div class="item">
 							    <i class="large github middle aligned icon"></i>
 							    <div class="content">
-							      <p>Secret command</p>
+							      <p>Secret Command</p>
 							    </div>
 							  </div>
 							</div>
@@ -123,6 +135,14 @@
 						<h1>Result Area</h1>
 	          <div id="testarea" class="ui raised very padded text container segment">
 							<div id="tv-medium-widget-cdee4"></div>
+							<table id="employeedb" class="ui celled table" style="display:none;">
+								<thead>
+									<th>First Name</th>
+									<th>Last Name</th>
+									<th>Scores</th>
+								</thead>
+								<tbody id="empTableBody"></tbody>
+							</table>
 						</div>
 	        </div>
 	      </div>
